Set Git Exclusions

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@
 # Customer parameter files
 */config/customers/*
 
+# Customer FW Rules files
+*/modules/azureFwRules/*
+
 # Deployment file
 deploy.ps1
